--- a/responsive.css
+++ b/responsive.css
@@ -34,9 +34,9 @@
     .banner-texts{
         align-items: center;
         padding: 0;
-        margin-right: 500px;
+        /* margin-right: 500px; */
         text-align: center;
-        padding-right: 20px;
+        /* padding-right: 20px; */
         margin-left: 5%;
     }
 
@@ -47,19 +47,25 @@
     }
     .banner-image-container{
         padding: 0;
-        /* display: flex;
-        flex-direction: column; */
+        position: relative;
     }
 
     .pic1-container{
         margin-bottom: 150px;
         /* position: absolute; */
+        
     }
     .pic2-container{
-        
+       
+        position: absolute;
+        right: 75%;
+        top: 50%;
+        left: 47%;
     }
     .pic3-container{
-        
+        position: absolute;
+        bottom: 22%;
+        right: 40%;
     }
 
     /* featured */
