--- a/banner.css
+++ b/banner.css
@@ -31,7 +31,7 @@ a{
     padding: 2px;
     padding-top: 5px;
     margin-top: -7px;
-    margin-bottom: 5px;
+    margin-bottom: 40px;
 }
 
 .fa-cart-shopping{
@@ -75,6 +75,7 @@ a{
     font-size: 1rem;
     border: none;
     border-radius: 30px;
+    margin-top: 20px;
 }
 
 .banner-container{
@@ -129,3 +130,25 @@ a{
     display: flex;
     background-color: white;
 }
+
+.design-1{
+    position: absolute;
+    bottom: 30%;
+    left: 20%;
+}
+
+.design-2{
+    position: absolute;
+    bottom: 50%;
+    right: 20%;
+    top: 40%;
+}
+
+/* .pets-image-container{
+    display: flex;
+    gap: 54px;
+    padding: 20px 180px;
+} */
+/* .petshop-logo{
+    margin-top: -10px;
+} */
