--- a/list.css
+++ b/list.css
@@ -13,6 +13,7 @@
     display: flex;
     /* justify-content: space-around; */
     margin: 50px 200px 40px 250px;
+    position: relative;
 }
 
 .listing-div3{
@@ -35,6 +36,14 @@
     margin-top: 50px;
 }
 
-.div2-inner-2{
-    /* width: 500px; */
+.list-1-abs{
+    position: absolute;
+    right: 26%;
+    top: -35%;
+}
+.list-2-abs{
+    position: absolute;
+    bottom: -36%;
+    left: 25%;
+    
 }
