--- a/pets.css
+++ b/pets.css
@@ -1,6 +1,7 @@
 .pets{
     margin-top: 15%;
     text-align: center;
+    margin-left: 17px;
 }
 
 /* .pets-image-container > img{
@@ -17,7 +18,7 @@
 .pets-image-container{
     display: flex;
     gap: 50px;
-    padding: 20px 270px ;
+    padding: 20px 268px;
 }
 
 .pet-title{
