--- a/popular.css
+++ b/popular.css
@@ -1,3 +1,24 @@
+.container{
+    padding: 0;
+    margin: 0px;
+    box-sizing: border-box;
+    max-width: 1320px;
+    margin: 0 auto;
+}
+footer{
+    width: 100%;
+}
+                                    /* footer */
+
+ /* footer {
+    width: 100%;
+    margin: 0;
+    box-sizing: border-box; 
+    background-color: rgba(38, 14, 7, 1);
+    padding: 20px 0;
+} */
+
+
 .popular-div1{
     text-align: center;
 }
@@ -7,10 +28,6 @@
     justify-content: space-evenly;
 }
 
-.popular-div2{
-    margin: 20px 100px 20px 100px;
-    padding-left: 200px;
-}
 
 .popular-image-1{
     max-width: 300px;
@@ -27,4 +44,35 @@
     max-width: 300px;
     height: 300px;
     border-radius: 15px;
+}
+
+.pop-pic-1{
+    width: 100%;
+    height: 300px;
+}
+
+.popular-1-abs{
+   
+    
+}
+.popular-main-abs{
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(3,  1fr);
+    /* border: 1px solid red; */
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.popular-2-abs{
+ 
+}
+@media screen and (max-width:575px) {
+    .popular-main-abs{
+        grid-template-columns: repeat(1,  1fr);
+    }
+}
+@media screen  and (min-width:576px) and (max-width:1023px) {
+    .popular-main-abs{
+        grid-template-columns: repeat(2,  1fr);
+    }
 }
