--- a/responsive perfect.css
+++ b/responsive perfect.css
@@ -7,5 +7,11 @@
     .perfect-description{
         margin-top: 10px;
     }
-    
+    .perfect-div1{
+        margin-left: 45px;
+    }
+
+    .perfect-div2{
+        margin-left: -15px;
+    }
 }
