--- a/responsive popular.css
+++ b/responsive popular.css
@@ -16,4 +16,16 @@
         margin-left: 20px;
         gap: 15px;
     }
+
+    .popular-image-1, .popular-image-2, .popular-image-3{
+        margin-left: -15px;
+        margin-top: 10px;
+    }
+
+    .popular-main-abs{
+       display: flex;
+       flex-wrap: wrap;
+       border: 2px solid red
+       /* grid-template-columns: repeat(1,1fr); */
+    }
 }
