--- a/responsive shop.css
+++ b/responsive shop.css
@@ -2,7 +2,7 @@
         .shop-div2{
             display: grid;
             grid-template-columns: repeat(1,1fr);
-            margin-left: 20px;
+            margin-left: 50px;
         }
 
         .dog{
@@ -33,5 +33,8 @@
         .fish2{
             background-color: white;
             margin-left: 60px;
+        }
+        .shop-1-abs, .shop-2-abs{
+            display: none;
         }
     }
