--- a/shop.css
+++ b/shop.css
@@ -10,8 +10,9 @@
     display: flex;
     /* justify-content: space-evenly; */
     gap: 50px;
-    margin-left: 370px;
+    margin-left: 245px;
     margin-top: 30px;
+    position: relative;
 }
 
 .dog{
@@ -53,4 +54,15 @@
     font-weight: 400;
     color: rgba(147, 134, 131, 1);
     margin-top: 10px;
+}
+
+.shop-1-abs{
+    position: absolute;
+    left: -12%;
+    top: 20%;
+}
+.shop-2-abs{
+    position: absolute;
+    right: 12%;
+    bottom: -6%;
 }
