--- a/responsive popular.css
+++ b/responsive popular.css
@@ -25,7 +25,7 @@
     .popular-main-abs{
        display: flex;
        flex-wrap: wrap;
-       border: 2px solid red
+       /* border: 2px solid red */
        /* grid-template-columns: repeat(1,1fr); */
     }
 }
