--- a/responsive.css
+++ b/responsive.css
@@ -77,12 +77,15 @@
     }
 
     .pets-image-container{
-        display: flex;
-        flex-direction: column;
-        /* grid-template-columns: repeat(1,1fr); */
+        /* display: flex;
+        flex-direction: column; */
+        /* display: grid;
+        grid-template-columns: repeat(1,1fr); */
+        flex-wrap: wrap;
+        gap: 40px;
         padding: 0;
         margin-top: 50px;
-        margin-left:-200px;
+        /* margin-left:-200px; */
     }
    
     .main{
@@ -91,7 +94,6 @@
     
     .image-caption{
         text-align: center;
-        margin-left: 70px;
     }
 
     .design-1{
