--- a/banner.css
+++ b/banner.css
@@ -13,6 +13,7 @@
     gap: 20px;
     font-size: 1.1rem;
     font-weight: 700;
+    padding: 11px;
 }
 a{
     text-decoration: none;
@@ -65,6 +66,12 @@ a{
 
 .banner-description{
     margin-bottom: 10px;
+font-size: 1.2rem;
+font-weight: 500;
+/* line-height: 36px; */
+/* text-align: left; */
+color: rgba(147, 134, 131, 1);
+
 }
 
 .banner-button{
@@ -87,7 +94,6 @@ a{
 }
 
 .banner-image-container{
-    /* padding-right: 100px; */
     padding: 0 250px;
     position: relative;
 }
@@ -104,7 +110,6 @@ a{
 }
 .pic1-container{
     z-index: 0;
-    /* position: absolute; */
 }
 
 .pic2-container{
@@ -115,8 +120,8 @@ a{
 }
 
 .pic3-container{
-    border: 2px solid steelblue;
-    /* border-radius: 20px; */
+    border: 1px solid steelblue;
+    background-color: rgb(2, 25, 40);
     position: absolute;
     bottom: 20%;
     right: 35%;
@@ -126,9 +131,9 @@ a{
     display: flex;
     background-color: white;
 }
-.logo2-container{
-    display: flex;
-    background-color: white;
+
+.logo1-cat-texts{
+    padding: 6px;
 }
 
 #log-1, #log-2, #log-3, #log-4{
@@ -146,10 +151,6 @@ a{
 .service-div-description{
     margin-bottom: 20px;
     margin-top: 20px;
-}
-
-.service-container{
-    /* margin-bottom: 200px; */
 }
 
 .design-1{
