--- a/list.css
+++ b/list.css
@@ -10,14 +10,15 @@
     
 }
 .listing-div2{
+    box-sizing: border-box;
     display: flex;
-    /* justify-content: space-around; */
-    margin: 50px 200px 40px 250px;
+    justify-content: space-evenly;
     position: relative;
 }
 
 .listing-div3{
     text-align: center;
+    margin-top: 50px;
 }
 .list-image{
     max-width: 370px;
@@ -25,25 +26,38 @@
     border-radius: 10px;
 }
 
-.div2-inner-1{
+.div2-inner-1, .div2-inner-3{
     text-align: center;
-    margin-right: 70px;
-    margin-top: 50px;
-}
-.div2-inner-3{
-    text-align: center;
-    margin-left: 70px;
     margin-top: 50px;
 }
 
+
 .list-1-abs{
     position: absolute;
-    right: 26%;
-    top: -35%;
+    right: 35%;
+    top: -34%;
 }
 .list-2-abs{
     position: absolute;
-    bottom: -36%;
-    left: 25%;
+    bottom: -37%;
+    left: 33%;
     
+}
+
+.list-text{
+    margin-top: 10px;
+    font-size: 16px;
+    font-weight: 400;  
+    color: rgb(147, 134, 131, 1)
+}
+
+.puppies{
+    margin-top: 10px;
+    font-size: 1rem;
+    font-weight: 600;
+    color: rgba(38, 14, 7, 1);
+}
+
+.create{
+    color: rgba(97, 213, 223, 1);
 }
