--- a/responsive list.css
+++ b/responsive list.css
@@ -4,6 +4,9 @@
         flex-direction: column;
         margin-left: 20px;
     }
+    .div2-inner-1{
+        margin-right: 50px;
+    }
     .div2-inner-2{
         order: -1;
     }
@@ -12,7 +15,8 @@
         margin-left: 40px;
     }
     .div2-inner-3{
-        margin-left: 40px;
+        margin-top: 30px;
+        text-align: center;
     }
     .div2-inner-inner{
         margin-left: 40px;
@@ -21,7 +25,6 @@
     .list-section{
         background-color:lightgrey;
         border-radius: 10px;
-        /* color: white; */
     }
     .list-1-abs,.list-2-abs{
         display: none;
