--- a/services.css
+++ b/services.css
@@ -39,21 +39,25 @@
 
 .service-div-description{
     padding-left: 20px;
+
+font-size: 16px;
+font-weight: 400;
+color: rgba(147, 134, 131, 1);
+
 }
 
 .service-div2{
     position: relative;
 }
 
-.service-div{
-    /* padding-left: -20px; */
+.text-color{
+
+font-size: 1rem;
+font-weight: 400;
+
+    color: rgba(147, 134, 131, 1)
 }
-/* .service-div{
-    padding: 0;
-    margin: 0px;
-    box-sizing: border-box;
-    margin-left: -7px;
-} */
+
 .absolute-2{
     position: absolute;
     bottom: 65%;
