--- a/banner.css
+++ b/banner.css
@@ -6,6 +6,7 @@
 .nav-container{
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 .nav-menu{
@@ -14,6 +15,15 @@
     font-size: 1.1rem;
     font-weight: 700;
     padding: 11px;
+    padding-top: 30px;
+}
+
+.nav-logins{
+    padding-top: 39px;
+    display: flex;
+    gap: 15px;
+    align-items: center;
+    margin-bottom: 21px;
 }
 a{
     text-decoration: none;
@@ -23,19 +33,36 @@ a{
 }
 .links{
     color: black;
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 700;
+    
+}
+
+
+.menu-div{
+    padding-top: 10px;
 }
 
 #block{
     display: block;
     color: orangered;
     border: 2px solid orangered;
-    padding: 2px;
-    padding-top: 5px;
-    margin-top: -7px;
-    margin-bottom: 40px;
+    padding: 10px;
+
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 700;
 }
 
-.fa-cart-shopping{
+.login-register{
+font-family: Roboto;
+font-size: 16px;
+font-weight: 400;
+color: rgba(201, 195, 193, 1);
+}
+
+.fa-cart-shopping , .fa-regular{
     color: orangered;
 }
 .fa-bars{
@@ -45,11 +72,12 @@ a{
 .nav-button{
     background-color: orangered;
     color: white;
-    margin-left: 10px;
-    padding: 10px;
-    font-size: 1rem;
-    border: none;
+    padding: 15px;
+    display: flex;
+    gap: 5px;
     border-radius: 30px;
+    font-size: 1rem;
+    
 }
 
 /* banner */
@@ -59,18 +87,16 @@ a{
 }
 
 .banner-title{
-    font-size: 3rem;
+    font-size: 3.2rem;
     font-weight: bolder;
     margin-bottom: 10px;
 }
 
 .banner-description{
     margin-bottom: 10px;
-font-size: 1.2rem;
-font-weight: 500;
-/* line-height: 36px; */
-/* text-align: left; */
-color: rgba(147, 134, 131, 1);
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: rgba(147, 134, 131, 1);
 
 }
 
@@ -94,7 +120,7 @@ color: rgba(147, 134, 131, 1);
 }
 
 .banner-image-container{
-    padding: 0 250px;
+    padding: 0 190px;
     position: relative;
 }
 
@@ -119,14 +145,7 @@ color: rgba(147, 134, 131, 1);
     z-index: 2;
 }
 
-.pic3-container{
-    border: 1px solid steelblue;
-    background-color: rgb(2, 25, 40);
-    position: absolute;
-    bottom: 20%;
-    right: 35%;
-    z-index: 2;
-}
+
 .logo1-container{
     display: flex;
     background-color: white;
@@ -165,3 +184,71 @@ color: rgba(147, 134, 131, 1);
     right: 7%;
     top: 40%;
 }
+
+
+
+/* cat with background */
+
+.bacground-1{
+    position: relative;
+    max-width: 781px;
+    height: 449px;
+}
+
+.cat-big{
+    position: absolute;
+    top: 0;
+    left: 206px;
+    max-width: 781px;
+    height: 449px;
+}
+
+.background-2{
+   position: absolute;
+   top: 239px;
+   left: 509px;
+   max-width: 300px;
+    height: 250px;
+}
+
+.cat-small{
+    position: absolute;
+    top: 239px;
+    left: 510px;
+    max-width: 250px;
+    height: 250px;
+}
+
+.ban-design-1{
+    position: absolute;
+    top: -3px;
+    left: 429px;
+    max-width: 250px;
+    height: 230px;
+}
+
+.ban-design-2{
+    position: absolute;
+    top: 210px;
+    left: 80px;
+
+    max-width: 250px;
+    height: 230px;
+}
+
+.pic3-container{
+    position: absolute;
+    border: 1px solid steelblue;
+    background-color: rgb(2, 25, 40);
+    bottom: -53px;
+    right: 175px;
+}
+
+/* .pic3-container{
+    border: 1px solid steelblue;
+    background-color: rgb(2, 25, 40);
+    position: absolute;
+    bottom: 20%;
+    right: 35%;
+    z-index: 2;
+} */
