--- a/responsive looking.css
+++ b/responsive looking.css
@@ -5,7 +5,7 @@
         margin-left: 20px;
     }
     .looking-section{
-        background-color: lightcoral;
+        /* background-color: lightcoral; */
         border-radius: 15px;
     }
     .looking-div2{
