--- a/responsive perfect.css
+++ b/responsive perfect.css
@@ -8,10 +8,11 @@
         margin-top: 10px;
     }
     .perfect-div1{
-        margin-left: 45px;
+        margin-left: 26px;
     }
 
-    .perfect-div2{
-        margin-left: -15px;
+    .perfect-div2 {
+        margin-left: 3px;
+        margin-top: -54px;
     }
 }
