--- a/list.css
+++ b/list.css
@@ -9,16 +9,17 @@
     text-align: center;
     
 }
-.listing-div2{
+.listing-div2 {
     box-sizing: border-box;
     display: flex;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
+    justify-content: space-around;
     position: relative;
 }
 
-.listing-div3{
+.listing-div3 {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 105px;
 }
 .list-image{
     max-width: 370px;
@@ -26,23 +27,23 @@
     border-radius: 10px;
 }
 
-.div2-inner-1, .div2-inner-3{
+.div2-inner-1, .div2-inner-3 {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 122px;
 }
 
 
-.list-1-abs{
+.list-1-abs {
     position: absolute;
-    right: 35%;
-    top: -34%;
+    right: 29%;
+    top: -2%;
 }
-.list-2-abs{
+.list-2-abs {
     position: absolute;
-    bottom: -37%;
-    left: 33%;
-    
+    bottom: -70%;
+    left: 28%;
 }
+
 
 .list-text{
     margin-top: 10px;
@@ -60,4 +61,23 @@
 
 .create{
     color: rgba(97, 213, 223, 1);
+}
+
+.div2-inner-2{
+    position: relative;
+}
+
+.large-cat-backgrnd {
+    position: absolute;
+    max-width: 313px;
+    height: 191px;
+    top: 126px;
+    left: -149px;
+}
+.large-cat {
+    position: absolute;
+    max-width: 300px;
+    height: 329px;
+    top: -12px;
+    left: -74px;
 }
