--- a/looking.css
+++ b/looking.css
@@ -10,13 +10,12 @@
     margin-top: 20px;
 }
 
-.looking-div2{
+.looking-div2 {
     display: flex;
     /* justify-content: space-around; */
-    
-    gap: 50px;
-    margin-left: 270px;
-    margin-right: 200px;
+    gap: 65px;
+    margin-left: 166px;
+    margin-right: 162px;
     position: relative;
 }
 
@@ -43,12 +42,81 @@ color: rgba(147, 134, 131, 1);
 }
 .looking-2-abs{
     position: absolute;
-    right: -17%;
+    right: -14%;
 }
 
-.looking-text{
-
-font-size: 16px;
-
-color: rgba(147, 134, 131, 1);
+.looking-text, .looking-text-2, .looking-text-3{
+    font-size: 16px;
+    color: rgba(147, 134, 131, 1);
+    margin-left: -35px;
 }
+
+.looking-title{
+    margin-top: 320px;
+    margin-left: -41px;
+}
+
+.looking-image{
+    position: relative;
+    
+}
+.looking-backgrnd{
+    position: absolute;
+    max-width: 300px;
+    height: 300px;
+    top: 0;
+    left: 0;
+}
+
+.looking-image-1 {
+    position: absolute;
+    max-width: 300px;
+    height: 297px;
+    top: -8px;
+    left: 17px;
+}
+
+.looking-backgrnd-2 {
+    position: relative;
+    max-width: 251px;
+    height: 300px;
+    top: 0;
+    left: 0;
+}
+.looking-image-2 {
+    position: absolute;
+    max-width: 300px;
+    height: 297px;
+    top: -3px;
+    left: 56px;
+}
+
+.looking-backgrnd-3 {
+    position: relative;
+    max-width: 251px;
+    height: 300px;
+    top: 0;
+    left: 0;
+}
+.looking-image-3 {
+    position: absolute;
+    max-width: 300px;
+    height: 297px;
+    top: -1px;
+    left: 41px;
+}
+
+.text-div1{
+    margin-left: -37px;
+}
+.image-2-title,.image-3-title{
+    margin-top: 18px;
+}
+
+.looking-text-2{
+    margin-left: 10px;
+}
+
+/* .image-3-title{
+    margin-top: 18px;
+} */
