--- a/perfect.css
+++ b/perfect.css
@@ -13,10 +13,10 @@
     max-width: 30px;
 }
 
-.perfect-container{
+.perfect-container {
     display: flex;
-    gap: 50px;
-    margin-left: 370px;
+    gap: 384px;
+    /* margin-left: 209px; */
 }
 
 .perfect-title{
@@ -32,4 +32,22 @@
 
 .perfect-div2{
     margin-top: 50px;
+}
+
+.perfect-div1 {
+    position: relative;
+    margin-left: 98px;
+}
+
+.perfect-backgrnd{
+    position: absolute;
+    
+}
+
+.perfect-image {
+    position: absolute;
+    max-width: 300px;
+    height: 350px;
+    top: -64px;
+    left: -22px;
 }
