--- a/responsive health.css
+++ b/responsive health.css
@@ -6,10 +6,10 @@
     .health-anchors{
         margin-left: 20px;
     }
-    .health{
-        margin-left: 10px;
+    .health {
+        margin-left: 148px;
+        margin-top: 200px;
     }
-
     
 
     .health-image{
@@ -20,6 +20,26 @@
         margin-left: -10px;
     }
     .health-2-abs, .health-1-abs{
+        display: none;
+    }
+
+    .person-image {
+        position: absolute;
+        max-width: 267px;
+        height: 205px;
+        top: 26px;
+        left: 23px;
+    }
+
+    .person-backgrnd {
+        position: absolute;
+        max-width: 297px;
+        height: 170px;
+        top: 95px;
+        left: 9px;
+    }
+
+    .health-anchors{
         display: none;
     }
    
