--- a/looking.css
+++ b/looking.css
@@ -2,6 +2,10 @@
     margin-top: 200px;
 }
 
+.looking-div1-title{
+    font-size: 2rem;
+}
+
 .image1{
     max-width: 250px;
     height: 250px;
@@ -29,10 +33,10 @@
 }
 
 .looking-div1-description{
-    margin-top: 30px;
+    margin-top: 20px;
 font-size: 16px;
 color: rgba(147, 134, 131, 1);
-
+line-height: 30px;
 }
 
 .looking-1-abs{
@@ -40,6 +44,7 @@ color: rgba(147, 134, 131, 1);
     top: 40%;
     left: -17%;
 }
+
 .looking-2-abs{
     position: absolute;
     right: -14%;
@@ -49,6 +54,8 @@ color: rgba(147, 134, 131, 1);
     font-size: 16px;
     color: rgba(147, 134, 131, 1);
     margin-left: -35px;
+    line-height: 30px;
+    margin-top: 5px;
 }
 
 .looking-title{
