--- a/popular.css
+++ b/popular.css
@@ -16,6 +16,7 @@ footer{
 .popular-div3{
     display: flex;
     justify-content: space-evenly;
+    gap: 157px;
 }
 
 .most-popular{
@@ -48,6 +49,11 @@ footer{
     font-size: 16px;
     font-weight: 400;
     color: rgba(147, 134, 131, 1);
+    line-height: 30px;
+}
+
+.popular-title{
+    font-size: 2rem;
 }
 
 .popular-texts{
@@ -55,7 +61,7 @@ footer{
 font-size: 16px;
 font-weight: 400;
 color: rgba(147, 134, 131, 1);
-  
+line-height: 32px;
 }
 
 .popular-main-abs{
