--- a/responsive service.css
+++ b/responsive service.css
@@ -7,17 +7,17 @@
         position: relative;
         margin-top: 30px;
     }
-    .service-div{
+    .service-div {
         margin-top: -129px;
+        margin-left: -75px;
     }
-
    
     .pink-background {
         position: absolute;
         max-width: 305px;
         height: 264px;
         top: 14px;
-        left: 0;
+        left: -85px;
         bottom: 8px;
     }
 
@@ -25,8 +25,8 @@
         position: absolute;
         max-width: 300px;
         height: 406px;
-        top: -130px;
-        left: 2px;
+        top: -128px;
+        left: -81px;
     }
 
     .absolute-2{
@@ -42,6 +42,19 @@
     }
     .service-image{
         max-width: 100%;
+    }
+
+    .service-div-title {
+        text-align: center;
+        margin-left: -35px;
+    }
+
+    .service-div-description {
+        text-align: center;
+        font-size: 16px;
+        font-weight: 400;
+        color: rgba(147, 134, 131, 1);
+        padding: 0;
     }
 
     .absolute-3,.absolute-4{
