--- a/services.css
+++ b/services.css
@@ -5,21 +5,22 @@
 }
 
 .logo1-texts, .logo2-texts, .logo3-texts, .logo4-texts{
-    padding-top: 20px;
+    padding-top: -4px;
 }
 
-.service-container{
+.service-container {
     margin-top: 250px;
     display: flex;
-    
+    font-size: 1.7rem;
     gap: 88px;
     margin-bottom: 100px;
-    
+    margin-left: 100px;
 }
 
 .service-logo-container{
     display: grid;
     grid-template-columns: repeat(2,1fr);
+    margin-top: 42px;
 }
 
 .service-image{
@@ -53,7 +54,8 @@ color: rgba(147, 134, 131, 1);
 .text-color{
     font-size: 1rem;
     font-weight: 400;
-    color: rgba(147, 134, 131, 1)
+    color: rgba(147, 134, 131, 1);
+    margin-top: 5px;
 }
 
 
@@ -93,9 +95,9 @@ color: rgba(147, 134, 131, 1);
     left: 305px;
 }
 
-.absolute-2{
+.absolute-2 {
     position: absolute;
-    bottom: -36%;
+    bottom: -22%;
     left: -15%;
     max-height: 150px;
 }
