--- a/health.css
+++ b/health.css
@@ -88,16 +88,15 @@ color: rgba(147, 134, 131, 1);
     position: relative;
 }
 
-.health-1-abs{
+.health-1-abs {
     position: absolute;
-    bottom: 10%;
-    right: 90%;
-    top: 85%;
+    right: 296px;
+    top: 294px;
 }
-.health-2-abs{
+.health-2-abs {
     position: absolute;
-    top: -73px;
-    right: -17%;
+    right: -230px;
+    top: -7px;
 }
 
 
