--- a/responsive.css
+++ b/responsive.css
@@ -33,7 +33,7 @@
         align-items: center;
         padding: 0;
         text-align: center;
-        margin-left: 5%;
+        /* margin-left: 5%; */
     }
 
     .banner-description{
@@ -60,9 +60,9 @@
         top: 50%;
         left: 47%;
     }
-    .pic3-container{
+    .pic3-container {
         position: absolute;
-        bottom: 18%;
+        bottom: 15%;
         right: 40%;
     }
 
@@ -70,21 +70,22 @@
 
     .bacground-1 {
         position: relative;
-        max-width: 319px;
-        height: 408px;
-        left: 1px;
+        max-width: 435px;
+        height: 544px;
+        left: 0px;
         top: 0;
     }
 
-    .cat-big{
+    .cat-big {
         position: absolute;
-        left: 0;
+        left: 45px;
+        top: 96px;
     }
 
     .background-2 {
         position: absolute;
         top: 260px;
-        left: 478px;
+        left: 584px;
         max-width: 300px;
         height: 250px;
     }
@@ -92,7 +93,7 @@
     .cat-small {
         position: absolute;
         top: 259px;
-        left: 484px;
+        left: 588px;
         max-width: 250px;
         height: 250px;
     }
