--- a/responsive service.css
+++ b/responsive service.css
@@ -9,9 +9,13 @@
     }
     .service-div {
         margin-top: -129px;
-        margin-left: -75px;
+        margin-left: -93px;
     }
-   
+    .logo-title {
+        font-size: 2rem;
+        font-weight: 700;
+        margin-top: 12px;
+    }
     .pink-background {
         position: absolute;
         max-width: 305px;
@@ -20,6 +24,8 @@
         left: -85px;
         bottom: 8px;
     }
+
+
 
     .girl-with-cat {
         position: absolute;
@@ -66,11 +72,12 @@
     }
 
     /* .popular-title{
-        margin-top: 0;
+        margin-top: ;
     } */
 
     .most-popular {
         margin-top: 431px;
     }
+    
     
 }
