--- a/health.css
+++ b/health.css
@@ -65,7 +65,7 @@ color: rgba(147, 134, 131, 1);
     margin-bottom: 20px;
     font-size: 2.3rem;
     font-weight: bolder;
-    color: rgb(165, 56, 22);
+    /* color: rgb(165, 56, 22); */
 }
 .health-description{
     font-size: 1rem;
