--- a/responsive company.css
+++ b/responsive company.css
@@ -1,11 +1,9 @@
 @media screen and (max-width:576px) {
-    .company-icon-container{
+    .company-icon-container {
         display: grid;
-        grid-template-columns: repeat(1,1fr);
-        /* grid-template-columns: repeat(2,ifr); */
+        grid-template-columns: repeat(1, 1fr);
         gap: 60px;
-        margin-left: 100px;
-        
+        margin-left: 142px;
     }
     .company-icon {
         max-width: 151px;
