--- a/responsive health.css
+++ b/responsive health.css
@@ -31,19 +31,37 @@
         max-width: 267px;
         height: 205px;
         top: 26px;
-        left: 23px;
+        left: 74px;
     }
 
-    .person-backgrnd {
+       .person-backgrnd {
         position: absolute;
         max-width: 297px;
-        height: 170px;
+        height: 173px;
         top: 95px;
-        left: 9px;
+        left: 60px;
     }
 
     .health-anchors{
         display: none;
+    }
+    .health-description {
+        font-size: 1rem;
+        font-weight: 400;
+        color: rgba(147, 134, 131, 1);
+        line-height: 30px;
+        margin-left: -5px;
+    }
+
+    .health-btn {
+        margin-top: 20px;
+        margin-left: 119px;
+        padding: 20px;
+        border: none;
+        background-color: orangered;
+        color: white;
+        border-radius: 30px;
+        font-size: 1rem;
     }
    
 }
