--- a/responsive looking.css
+++ b/responsive looking.css
@@ -24,4 +24,17 @@
         top: -1px;
         left: -4px;
     }
+    /* ekhon */
+
+    .looking-image {
+        position: relative;
+        margin-left: 50px;
+    }
+    .looking-text, .looking-text-2, .looking-text-3 {
+        font-size: 16px;
+        color: rgba(147, 134, 131, 1);
+        /* margin-left: 0px; */
+        line-height: 30px;
+        margin-top: 5px;
+    }
 }
