--- a/responsive perfect.css
+++ b/responsive perfect.css
@@ -12,7 +12,24 @@
     }
 
     .perfect-div2 {
-        margin-left: 3px;
+        margin-left: -7px;
         margin-top: -54px;
+    }
+    .perfect-backgrnd {
+        position: absolute;
+        margin-left: 40px;
+    }
+    .perfect-image {
+        position: absolute;
+        max-width: 300px;
+        height: 350px;
+        top: -58px;
+        left: 18px;
+    }
+    .slider {
+        width: 95px;
+        height: 20px;
+        margin-left: 159px;
+        margin-top: 45px;
     }
 }
