--- a/responsive shop.css
+++ b/responsive shop.css
@@ -1,8 +1,8 @@
     @media screen and (max-width:576px) {
-        .shop-div2{
+        .shop-div2 {
             display: grid;
-            grid-template-columns: repeat(1,1fr);
-            margin-left: 50px;
+            grid-template-columns: repeat(1, 1fr);
+            margin-left: 101px;
         }
 
         .dog{
