--- a/popular.css
+++ b/popular.css
@@ -1,3 +1,5 @@
+/* Most popular */
+
 .container{
     padding: 0;
     margin: 0px;
@@ -69,15 +71,4 @@ line-height: 32px;
     grid-template-columns: repeat(3,  1fr);
     margin-top: 30px;
     margin-bottom: 30px;
-}
-
-@media screen and (max-width:575px) {
-    .popular-main-abs{
-        grid-template-columns: repeat(1,  1fr);
-    }
-}
-@media screen  and (min-width:576px) and (max-width:1023px) {
-    .popular-main-abs{
-        grid-template-columns: repeat(2,  1fr);
-    }
 }
